<resources>
    <string name="app_name">Diagnostic</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_pcba_panel">PCBA Diagnostic Test</string>
    <string name="title_assy_panel">ASSY Diagnostic Test</string>
    <string name="title_runin_panel">Runin Diagnostic Test</string>
    <string name="title_gps_panel">GPS Diagnostic Test</string>
    <string name="title_hotkey_panel">HotKey Diagnostic Test</string>
    <string name="title_touch_panel">TouchPanel Diagnostic Test</string>
    <string name="title_barcode_panel">BarCode Diagnostic Test</string>
    <string name="title_sdcard_panel">SDcard Diagnostic Test</string>
    <string name="title_rtc_panel">RTC Diagnostic Test</string>
    <string name="title_battery_panel">Battery Diagnostic Test</string>
    <string name="title_camera_panel">Camera Diagnostic Test</string>
    <string name="title_compass_panel">Compass Diagnostic Test</string>
    <string name="title_hdmi_panel">HDMI Diagnostic Test</string>
    <string name="title_speaker_front_panel">Phone Speaker Diagnostic Test</string>
    <string name="title_gsensor_panel">GSensor Diagnostic Test</string>
    <string name="title_gyroscope_panel">Gyroscope Diagnostic Test</string>
    <string name="title_flashlight_panel">FlashLight Diagnostic Test</string>
    <string name="title_backlight_panel">Backlight Diagnostic Test</string>
    <string name="title_motor_panel">Motor Diagnostic Test</string>
    <string name="title_third_generation_panel">3G Diagnostic Test</string>
    <string name="title_tgmodule_panel">3G Module Diagnostic Test</string>
    <string name="title_lightsensor_panel">LightSensor Diagnostic Test</string>
    <string name="title_bluetooth_panel">Bluetooth Diagnostic Test</string>
    <string name="title_runin_battery_panel">Runin Battery Diagnostic Test</string>
    <string name="title_runin_video_panel">Runin Video Diagnostic Test</string>
    <string name="title_runin_end_panel">Runin End Diagnostic Test</string>
    <string name="title_RuninVideo_panel">Runin Video Diagnostic Test</string>
    <string name="title_RuninEnd_panel">Runin End Diagnostic Test</string>
    <string name="title_audiofrontmic_panel">Audio Front MIC Diagnostic Test</string>
    <string name="title_audiobackmic_panel">Audio Back MIC Diagnostic Test</string>
    <string name="title_audiostereomic_panel">Audio Stereo MIC Diagnostic Test</string>
    <string name="title_microphone_panel">Microphone Diagnostic Test</string>
    <string name="title_phone_call_panel">Phone Call Diagnostic Test</string>
    <string name="submit">Submit</string>
    <string name="general_fail">FAIL</string>
    <string name="general_seconds_remaining">Remain:</string>
    <string name="pcba_button">PCBA</string>
    <string name="assy_button">ASSY</string>
    <string name="runin_button">Runin</string>
    <string name="exit">Exit</string>
    <string name="stop">Stop</string>
    <string name="log">Log</string>
    <string name="prompt">Warning</string>
    <string name="ok">OK</string>
    <string name="barcode_yes">Test Barcode!  Barcode can not empty！</string>
    <string name="auto">Auto</string>
    <string name="clear">Clear</string>
    <string name="user_choose">Choose</string>
    <string name="show_result">Result</string>
    <string name="start">Start</string>
    <string name="outOrNot">Exit or not?</string>
    <string name="checkbox_text_size">40dip</string>
    <string name="NULL">NULL</string>
    <string name="N_A">N/A</string>
    <string name="version_num">version number : </string>
    <string name="button">Button</string>
    <string name="usb_test">USBtest</string>
    <string name="show">show</string>
    <string name="gps_detect">Detect GPS .....</string>
    <string name="gps_fail">FAIL</string>
    <string name="gps_seconds_remaining">Remain:</string>
    <string name="gps_second">s</string>
    <string name="hotkey_note">Press hokey to test</string>
    <string name="hotkey_volumn_up">Vol +：   </string>
    <string name="hotkey_volumn_down">Vol -：   </string>
    <string name="hotkey_under_test">NONE</string>
    <string name="hotkey_submit">Submit</string>
    <string name="volume_up">volume_up</string>
    <string name="volume_down">volume_down</string>
    <string name="backlight_note">Drag bar to test backlight</string>
    <string name="backlight_pass">PASS</string>
    <string name="backlight_fail">FAIL</string>
    <string name="lcd_next">Click</string>
    <string name="lcd_title">LCD test result:</string>
    <string name="lcd_pass">PASS</string>
    <string name="lcd_fail">FAIL</string>
    <string name="lcd_countdownTime">15s</string>
    <string name="lcd_residue"></string>
    <string name="lcd_second">s</string>
    <string name="screen_around_allpass">All pass</string>
    <string name="screen_around_retest">Re-try?</string>
    <string name="screen_around_test_fail">FAIL</string>
    <string name="screen_around_residue"></string>
    <string name="screen_around_point"> dot</string>
    <string name="screen_around_retry">【Re-try】</string>
    <string name="screen_around_end">【End】</string>
    <string name="barcode_title">BarCode:</string>
    <string name="barcode_number_empty">Barcode Number must be not empty.</string>
    <string name="sdcard_title">SDcardTest</string>
    <string name="sdcard_test">Start</string>
    <string name="sdcard_skip">Skip</string>
    <string name="note_insert">Insert SD card</string>
    <string name="note_no_sdcard">Can not detect SD card, insert and press test</string>
    <string name="note_no_permission">SD card no R/W permission</string>
    <string name="note_testing">Testing</string>
    <string name="text_start">Please in </string>
    <string name="text_end">s to insert SD card: </string>
    <string name="sdcard_test_string">sdcard test</string>
    <string name="sdcard_folder_path">%1$s/SDcardTest</string>
    <string name="sdcard_file_path">%1$s/SDcardTest.txt</string>
    <string name="rtc_name">Name：</string>
    <string name="rtc_date">Date：</string>
    <string name="rtc_time">Time：</string>
    <string name="rtc_submit">Submit</string>
    <string name="battery_timeout">Waiting for overtime!</string>
    <string name="battery_time_second">s</string>
    <string name="battery_plugged">Plug：</string>
    <string name="battery_plugged_noplugged">No plugging</string>
    <string name="battery_plugged_usb">USB</string>
    <string name="battery_plugged_ac">AC</string>
    <string name="battery_health">Health：</string>
    <string name="battry_health_unknown">Unknown</string>
    <string name="battry_health_good">Good</string>
    <string name="battry_health_over_heat">Over heat</string>
    <string name="battry_health_dead">Dead</string>
    <string name="battry_health_over_voltage">Over voltage</string>
    <string name="battry_health_unspecific_failure">Unspecific Failure</string>
    <string name="battery_status">Status:</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_discharging">Discharging</string>
    <string name="battery_status_full">Full</string>
    <string name="battery_status_not_charging">Not charging</string>
    <string name="battery_status_unknown">Unknown</string>
    <string name="battery_level">Level：</string>
    <string name="battery_level_unit">%</string>
    <string name="battery_current">Current：</string>
    <string name="battery_current_unit">mA</string>
    <string name="gain_battery_current_path_fail">Get current path fail</string>
    <string name="battery_voltage">Voltage：</string>
    <string name="battery_voltage_unit">V</string>
    <string name="battery_temperature">Temperature：</string>
    <string name="battery_temperature_unit">℃</string>
    <string name="battery_sign">Plug in power supply!</string>
    <string name="battery_submit">Submit</string>
    <string name="runin_wifi_fileNotExist">Log file not exist</string>
    <string name="runin_wifi_fileNumberOver">Different log file</string>
    <string name="runin_wifi_testResultFail">Result is fail</string>
    <string name="runin_wifi_prompt">Warning: RunIn already tested,covering the log if continue</string>
    <string name="runin_wifi_continueTest">Continue?</string>
    <string name="runin_wifi_ensure">Yes</string>
    <string name="runin_wifi_cancle">Cancle</string>
    <string name="runin_wifi_test">runin wifi test</string>
    <string name="runin_wifi_state">wifi state</string>
    <string name="runin_wifi_AP">AP :</string>
    <string name="runin_wifi_RSSI">RSSI :</string>
    <string name="runin_wifi_test_result">Test Result</string>
    <string name="runin_wifi_finish">Submit</string>
    <string name="runin_wifi_openwifi_info">open wifi please wait</string>
    <string name="runin_wifi_openinfo ">wifi opened</string>
    <string name="runin_wifi_pass"> PASS</string>
    <string name="runin_wifi_info">wifi is enabled</string>
    <string name="runin_wifi_error_info">can not found AP</string>
    <string name="runin_wifi_ap_info">AP strength too weak !</string>
    <string name="runin_wifi_connect">connected the AP : </string>
    <string name="runin_wifi_connect_error">connect error to the AP : </string>
    <string name="runin_wifi_opening">wifi is opening</string>
    <string name="camera_str_take_picture">Back camera shot</string>
    <string name="camera_main">Back camera shot</string>
    <string name="camera_second">Front camera shot</string>
    <string name="camera_switch">Switch camera</string>
    <string name="camera_switch_error">Switch error</string>
    <string name="camera_str_err_nosd">No SD card</string>
    <string name="camera_back_pass">Back camera PASS</string>
    <string name="camera_back_fail">Back camera FAIL</string>
    <string name="camera_front_pass">Front camera PASS</string>
    <string name="camera_front_fail">Front camera FAIL</string>
    <string name="camera_str_warn_takepic">Take photo!</string>
    <string name="camera_str_warn_judge">Judge the result!</string>
    <string name="camera_pass">PASS</string>
    <string name="camera_fail">FAIL</string>
    <string name="pass_compass">PASS</string>
    <string name="fail_compass">FAIL</string>
    <string name="ecompass">E-compass point to North</string>
    <string name="nocompass">E-Compass Error</string>
    <string name="ecompasstest">E-CompassTest</string>
    <string name="hdmi_pass">PASS</string>
    <string name="hdmi_pfail">Disaplay FAIL</string>
    <string name="hdmi_vfail">Voice FAIL</string>
    <string name="hdmi_pla">Play</string>
    <string name="hdmi_pause">Pause</string>
    <string name="hdmi_play">Playing......</string>
    <string name="hdmi_stop">Stop.......</string>
    <string name="hdmi_errinfo">Error!Re-try!</string>
    <string name="hdmi_test">HDMI Test</string>
    <string name="speaker_front_pass">PASS</string>
    <string name="speaker_front_fail">Voice FAIL</string>
    <string name="speaker_front_play">Play</string>
    <string name="speaker_front_pause">Pause</string>
    <string name="speaker_front_playing">Playing......</string>
    <string name="speaker_front_stoping">Stop.......</string>
    <string name="speaker_front_errinfo">Error!Re-try!</string>
    <string name="tgmodule_test">Press to test：</string>
    <string name="tgmodule_start">Start</string>
    <string name="audio_start">Record</string>
    <string name="audio_stop">Stop</string>
    <string name="audio_play">Play</string>
    <string name="audio_pass">PASS</string>
    <string name="audio_fail">FAIL</string>
    <string name="microphone_start">Record</string>
    <string name="microphone_play">Play</string>
    <string name="microphone_pass">PASS</string>
    <string name="microphone_fail">FAIL</string>
    <string name="phone_call_call_button">CALL</string>
    <string name="phone_call_pass">PASS</string>
    <string name="phone_call_fail">FAIL</string>
    <string name="phone_call_call_title">Press to call：</string>
</resources>