<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_phone_call_panel"
        android:textSize="35dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/phone_call_call_title"
            android:textSize="50dip" />

        <Button
            android:id="@+id/phone_call_call_button"
            android:layout_width="200dip"
            android:layout_height="100dip"
            android:layout_gravity="center_horizontal"
            android:text="@string/phone_call_call_button"
            android:textSize="50dip" >
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/phone_call_pass"
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/phone_call_pass"
        android:textSize="50dip" >
    </Button>

    <Button
        android:id="@+id/phone_call_fail"
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dip"
        android:text="@string/phone_call_fail"
        android:textSize="50dip" >
    </Button>

</RelativeLayout>