<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/barcode_testcase_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:text="@string/title_barcode_panel" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/barcode_testcase_title"
        android:maxLines="2"
        android:singleLine="false"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:maxLength="25"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/submit"
        android:textSize="40dip" />

    <TextView
        android:id="@+id/BarCodeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numberEditText"
        android:layout_below="@+id/statusTextView"
        android:layout_marginTop="59dp"
        android:text="@string/barcode_title" />

</RelativeLayout>